// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`XIRR > with correct config > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "timeline.aag81lMifn6q",
          "type": "displayForm",
        },
        "localIdentifier": "a_timeline.aag81lMifn6q",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aadpHDMBecIy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aadpHDMBecIy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "timeline.aag81lMifn6q",
              "type": "displayForm",
            },
            "localIdentifier": "a_timeline.aag81lMifn6q",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
        "a_timeline.aag81lMifn6q",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aadpHDMBecIy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aadpHDMBecIy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with correct config > should create expected props for core chart 1`] = `
{
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with drilling on single measure > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "timeline.aag81lMifn6q",
          "type": "displayForm",
        },
        "localIdentifier": "a_timeline.aag81lMifn6q",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aadpHDMBecIy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aadpHDMBecIy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "timeline.aag81lMifn6q",
              "type": "displayForm",
            },
            "localIdentifier": "a_timeline.aag81lMifn6q",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
        "a_timeline.aag81lMifn6q",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aadpHDMBecIy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aadpHDMBecIy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with drilling on single measure > should create expected props for core chart 1`] = `
{
  "drillableItems": [
    [Function],
  ],
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with drilling on single measure with underlining disabled > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "timeline.aag81lMifn6q",
          "type": "displayForm",
        },
        "localIdentifier": "a_timeline.aag81lMifn6q",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aadpHDMBecIy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aadpHDMBecIy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "timeline.aag81lMifn6q",
              "type": "displayForm",
            },
            "localIdentifier": "a_timeline.aag81lMifn6q",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
        "a_timeline.aag81lMifn6q",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aadpHDMBecIy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aadpHDMBecIy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with drilling on single measure with underlining disabled > should create expected props for core chart 1`] = `
{
  "config": {
    "disableDrillUnderline": true,
  },
  "drillableItems": [
    [Function],
  ],
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with only measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aadpHDMBecIy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aadpHDMBecIy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aadpHDMBecIy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aadpHDMBecIy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with only measure > should create expected props for core chart 1`] = `
{
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with semantically wrong measure > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "timeline.aag81lMifn6q",
          "type": "displayForm",
        },
        "localIdentifier": "a_timeline.aag81lMifn6q",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abYgDBRagANw",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abYgDBRagANw",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "timeline.aag81lMifn6q",
              "type": "displayForm",
            },
            "localIdentifier": "a_timeline.aag81lMifn6q",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
        "a_timeline.aag81lMifn6q",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abYgDBRagANw",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abYgDBRagANw",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with semantically wrong measure > should create expected props for core chart 1`] = `
{
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;
